--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "description": "A simple example deployed using react-codesandboxer",
+  "description": "A simple example of using threejs and fiber to display a very large floor and a limited number of objects above it.",
   "main": "index.js",
   "dependencies": {
     "query-string": "7.0.0",
     "querystring": "0.2.1",
-    "react-router-dom": "latest",
-    "react-three-fiber": "5.3.10",
-    "@react-three/fiber": "7.0.17",
-    "@types/three": "0.133.1",
+    "react-router": "6.2.2",
+    "react-router-dom": "6.2.2",
+    "@react-three/fiber": "7.0.26",
+    "@types/three": "0.138.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
-    "three": "0.134.0",
+    "three": "0.138.3",
     "typescript": "4.4.4"
   },
   "devDependencies": {
@@ -24,8 +24,8 @@
     "css-loader": "^5.2.6",
     "html-webpack-plugin": "^5.3.1",
     "style-loader": "^2.0.0",
-    "webpack": "^5.39.0",
-    "webpack-cli": "^4.7.2",
+    "webpack": "5.71.0",
+    "webpack-cli": "4.9.2",
     "webpack-dev-server": "^3.11.2",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
